SERVER-37394 do not display deadline in timeout message

Because a lock acquisition can time out due to the minimum of the passed-in deadline or the MaxLockTimeout set on the Locker, we cannot show the exact deadline used for the timeout in the timeout message.

(cherry picked from commit 1e03955cdab995fed6672d75a6a4544a9771a279)