src/mongo/db/concurrency/d_concurrency.cpp
@@ -216,8 +216,10 @@ Lock::DBLock::DBLock(OperationContext* opCtx, StringData db, LockMode mode, Date
           opCtx, isSharedLockMode(_mode) ? MODE_IS : MODE_IX, deadline, InterruptBehavior::kThrow) {
     massert(28539, "need a valid database name", !db.empty() && nsIsDbOnly(db));
 
-    if (!_globalLock.isLocked())
+    if (!_globalLock.isLocked()) {
+        invariant(deadline != Date_t::max() || _opCtx->lockState()->hasMaxLockTimeout());
         return;
+    }
 
     // Need to acquire the flush lock
     _opCtx->lockState()->lockMMAPV1Flush();
@@ -229,7 +231,7 @@ Lock::DBLock::DBLock(OperationContext* opCtx, StringData db, LockMode mode, Date
     }
 
     _result = _opCtx->lockState()->lock(_opCtx, _id, _mode, deadline);
-    invariant(_result == LOCK_OK || deadline != Date_t::max());
+    invariant(_result == LOCK_OK || _result == LOCK_TIMEOUT);
 }
 
 Lock::DBLock::DBLock(DBLock&& otherLock)
@@ -277,7 +279,7 @@ Lock::CollectionLock::CollectionLock(Locker* lockState,
     }
 
     _result = _lockState->lock(_id, actualLockMode, deadline);
-    invariant(_result == LOCK_OK || deadline != Date_t::max());
+    invariant(_result == LOCK_OK || _result == LOCK_TIMEOUT);
 }
 
 Lock::CollectionLock::CollectionLock(CollectionLock&& otherLock)
